# diraq-ares-predicting-error-causation

./: IQ data.py  LICENSE  README.md  data_handler.py  error scaling.py  error_santiy_check.py  fitting_experimental.py  generative_model.py  hhm_opx.py  main.py  plotting.py  plotting_data.py  pyproject.toml  requirements.txt  scaling.py  setup.cfg  setup.py  simulate.py
data/: 200_repeats_20_measurements.mat  Repeated_readout_10000_measurements_20_repeats_run_19071.mat  odd_init.mat  superposition_init.mat
data/experimental data/: Repeated_readout_1000_measurements_20_repeats_run_even_init_18433.mat  data_handler.py
data/superconducting/: 2023-06-20 15:40:20.093530.npz  sequential_data_oxford.npz
errorcausation/: __init__.py
errorcausation/Catagorical/: __init__.py  categoricalmodel.py
errorcausation/Gaussian/: GaussianModel.py  helper_functions.py
errorcausation/active_reset/: simulating_qm_active_init.py
errorcausation/opx/: gaussian_hmm_algorithms_opx.py  gaussian_hmm_algorithms_raw_python.py  hmm_algorithms_opx.py  (+1 more)
examples/: Baum_Welch.py  active_reset_feedback.py  catagorical_example_experimental.py  catagorical_example_simulated.py  catagorical_histogram.py  forward_algorithm_gaussian.py  forward_algorithm_opx.py  gaussian_example_T1.py  gaussian_example_experimental.py  gaussian_example_simulated.py  hhm_gaussian.py  hmm_vs_qm.py  opx_forward_algorithm.py  opx_forward_algorithm_categorical.py  opx_forward_algorithm_gaussian.py  probability_distribution.py  qm_vs_threshold.py  simulated_error_bars.py  simulating_repeated_measurements.py  verbit_opx.py
opx/: hmm.py
src/: __init__.py  helper_functions.py  model.py  model_fitting.py  priors.py
(+32 files in other folders)
