[metadata]
name = errorcausation
version = 0.0.1
author = 'Barnaby van Straaten, Brandon Severin'
author_email = barnaby.vanstraaten@kellogg.ox.ac.uk
description = Analyse and quantify the SPAM + state flip errors in a quantum computer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oxquantum-repo/diraq-ares-predicting-error-causation
project_urls =
    Bug Tracker = https://github.com/oxquantum-repo/diraq-ares-predicting-error-causation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = errorcausation
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    tqdm
    hmmlearn
    numdifftools

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest==6.2.5
docs=
    Sphinx==4.4.0
    alabaster==0.7.12
    myst-parser==0.17.0

[options.entry_points]